  a network item (workgroup, host, or share).
- Added Smb4KBookmarkObject class that derives from QObject and encapsulates
  a bookmark.
- Introduced a new dynamic main tool bar. If you do not like it, you can enable 
  old tool bars via the 'Shown Toolbars' menu item.
- Added Wake On LAN (WOL) feature (closes SF ticket #27).
- Revised Smb4KGlobal namespace:
  + Merged Smb4KCore class and removed it.
  + Added Process enumeration in favor of per class solutions.
- Revised Smb4KHost class:
  + The unc() function now only returns the UNC in the form //HOST. If you
    also need the username, password or port in the string, use the url() 
    function.
  + Removed ipChecked() function.
  + Removed infoChecked() function.
  + Added hasIP() function.
  + Added hasInfo() function.
- Revised Smb4KShare class:
  + The unc() function now only returns the UNC in the form //HOST/Share. If 
    you also need the username, password or port in the string, use the url() 
    function.
  + Added setURL() function that takes a string as argument.
- Revised Smb4KCustomOptions class:
  + Added functions for Wake-On-LAN.
  + Added functions for defining the security mode used by mount.cifs.
- Revised Smb4KBookmark class:
  + Renamed function group() to groupName().
  + Renamed function setGroup() to setGroupName().
- Removed Smb4KIPAddressScanner class. IP addresses are now looked up by
  Smb4KScanner using a private job.
- Revised Smb4KBookmarkHandler class:
  + Renamed the bookmarks() functions to bookmarksList() to unify the naming.
  + To use functions from the bookmark handler in the plasmoid, Q_INVOKABLE 
    and Q_PROPERTY macros are used.
  + Added addBookmark() function that takes an URL as argument.
  + Added two removeBookmark() functions, one taking a pointer to a Smb4KBookmark
    object and one taking a URL.
  + Added private addBookmarks() function that takes a list of Smb4KBookmark 
    objects and optionally a boolean that indicates if the internal list of