@@ -641,9 +641,6 @@ bool Smb4KMountJob::createMountAction( Smb4KShare *share, Action *action )
     // Do nothing
   }
 
-  // Do not ask for a password. Use ~/.nsmbrc instead.
-  arguments << "-N";
-
   // UID
   if ( options )
   {
