@@ -13,6 +13,8 @@ Smb4K 1.1.0 (????-??-??):
 - Introduced a new dynamic main tool bar. If you do not like it, you can enable 
   old tool bars via the 'Shown Toolbars' menu item.
 - Added Wake On LAN (WOL) feature (closes SF ticket #27).
+- Improved mounting under FreeBSD. We do not need the ~/.nsmbrc file anymore
+  because the mount helper will feed the password to the mount process.
 - Revised Smb4KGlobal namespace:
   + Merged Smb4KCore class and removed it.
   + Added Process enumeration in favor of per class solutions.
@@ -91,9 +93,12 @@ Smb4K 1.1.0 (????-??-??):
   + Fixed mounting with Kerberos. The location of the ticket is propagated
     to the root environment in which the mounting is done and the 'cruid'
     argument to mount.cifs is set to the users uid (closes SF ticket #32).
+  + Adjusted command line under FreeBSD, so that the password can be passed
+    to the mount process by the mount helper.
 - Revised Smb4KWalletManager class:
   + When prompting for a password for a 'homes' share, use the UNC of the
     user's home directory and not //SERVER/homes.
+  + Removed obsolete writeToConfigFile() function under FreeBSD.
 - Revised Smb4KCustomOptionsManager class:
   + The customOptions() function now takes a boolean that determines if
     also entries that are only meant to be remounted are also returned.
